packages/CodingStandard/DotBlue/tests/invalid/PhpDocMethodReturnWhitespace.php
<?php

namespace Foo;


class Bar
{

	/**
	 * @param  string
	 * @return  self
	 */
	public function foo($foo)
	{
		return $this;
	}

}
